--- a/Cursos.html
+++ b/Cursos.html
@@ -16,11 +16,11 @@
         </div>
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="empresa.html">Empresa</a>
-            <a href="filosofia.html">Filosofía</a>
-            <a href="recursos.html">Recursos</a>
-            <a href="contacto.html">Contacto</a>
-            <a href="cursos.html" class="active">Cursos</a>
+            <a href="Empresa.html">Empresa</a>
+            <a href="Filosofia.html">Filosofía</a>
+            <a href="Recursos.html">Recursos</a>
+            <a href="Contacto.html">Contacto</a>
+            <a href="Cursos.html" class="active">Cursos</a>
         </nav>
     </header>
 
