--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </div>
     <nav>
       <a href="index.html" class="active">Inicio</a>
-      <a href="empresa.html">Empresa</a>
-      <a href="filosofia.html">Filosofía</a>
-      <a href="recursos.html">Recursos</a>
-      <a href="contacto.html">Contacto</a>
-      <a href="cursos.html">Cursos</a>
+      <a href="Empresa.html">Empresa</a>
+      <a href="Filosofia.html">Filosofía</a>
+      <a href="Recursos.html">Recursos</a>
+      <a href="Contacto.html">Contacto</a>
+      <a href="Cursos.html">Cursos</a>
     </nav>
   </header>
 
