--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Impulsamos el Futuro del Open Banking</h1>
     <p>Capacitación profesional en APIs financieras, regulación, seguridad y transformación digital para bancos,
       fintechs e instituciones educativas.</p>
-    <a href="cursos.html" class="btn">Explorar Cursos</a>
+    <a href="Cursos.html" class="btn">Explorar Cursos</a>
   </section>
 
   <!-- SECCION: ¿QUE ES OPEN BANKING? -->
